# shorter-links

./: .env.example  .gitignore  README.md  pyproject.toml
app/: bot.py  config.py  db.py  models.py  slug.py  storage.py  urls.py
app/handlers/: common.py  links.py
