[project]
name = "shorter-links"
version = "0.1.0"
description = "Telegram bot for shortening links with conversion statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=8.0"]
dev = ["ruff>=0.7", "pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
